--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -47,10 +47,14 @@
         </div>
       </div>
       <div
-        class="bg-gradient-to-br from-blue-400 to-purple-500 h-96 rounded-lg flex items-center justify-center animate-float"
+        class="rounded-lg overflow-hidden h-140 animate-float"
         [@slideInRight]
       >
-        <span class="text-white text-6xl font-bold">PW</span>
+        <img
+          src="../../../assets/about.jpg"
+          alt="Penny Wegman"
+          class="w-full h-full object-cover object-center"
+        />
       </div>
     </div>
   </div>
@@ -165,7 +169,38 @@
       <p class="text-center text-xl text-gray-600 mb-8">
         We are on Social Media! Follow us along the campaign trail!
       </p>
-      <!-- Add social media links/icons here -->
+      <div class="flex justify-center space-x-6">
+        <a
+          href="https://facebook.com/PennyWegman"
+          class="text-blue-600 hover:text-blue-700 transition-colors"
+        >
+          <i class="fab fa-facebook fa-3x"></i>
+        </a>
+        <a
+          href="https://twitter.com/PennyWegman"
+          class="text-blue-400 hover:text-blue-500 transition-colors"
+        >
+          <i class="fab fa-twitter fa-3x"></i>
+        </a>
+        <a
+          href="https://instagram.com/PennyWegman"
+          class="text-pink-600 hover:text-pink-700 transition-colors"
+        >
+          <i class="fab fa-instagram fa-3x"></i>
+        </a>
+        <a
+          href="https://linkedin.com/in/PennyWegman"
+          class="text-blue-800 hover:text-blue-900 transition-colors"
+        >
+          <i class="fab fa-linkedin fa-3x"></i>
+        </a>
+        <a
+          href="mailto:penny@pennywegman.com"
+          class="text-gray-600 hover:text-gray-800 transition-colors"
+        >
+          <i class="fas fa-envelope fa-3x"></i>
+        </a>
+      </div>
     </div>
   </div>
 </div>
