--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -173,24 +173,28 @@
         <a
           href="https://facebook.com/PennyWegman"
           class="text-blue-600 hover:text-blue-700 transition-colors"
+          target="_blank"
         >
           <i class="fab fa-facebook fa-3x"></i>
         </a>
         <a
           href="https://twitter.com/PennyWegman"
           class="text-blue-400 hover:text-blue-500 transition-colors"
+          target="_blank"
         >
           <i class="fab fa-twitter fa-3x"></i>
         </a>
         <a
           href="https://instagram.com/PennyWegman"
           class="text-pink-600 hover:text-pink-700 transition-colors"
+          target="_blank"
         >
           <i class="fab fa-instagram fa-3x"></i>
         </a>
         <a
           href="https://linkedin.com/in/PennyWegman"
           class="text-blue-800 hover:text-blue-900 transition-colors"
+          target="_blank"
         >
           <i class="fab fa-linkedin fa-3x"></i>
         </a>
