--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,14 +26,10 @@
         </p>
         <div class="flex justify-start space-x-4 mt-8">
           <button
+            (click)="navigateToDonate()"
             class="bg-blue-800 text-white px-8 py-3 rounded-lg hover:bg-blue-900 transition-all duration-300 transform hover:scale-105 hover:shadow-lg btn-animate"
           >
-            Learn More About Penny
-          </button>
-          <button
-            class="border border-blue-800 text-blue-800 px-8 py-3 rounded-lg hover:bg-blue-50 transition-all duration-300 transform hover:scale-105 hover:shadow-lg btn-animate"
-          >
-            Get Involved
+            DONATE
           </button>
         </div>
       </div>
